--- a/authors.html
+++ b/authors.html
@@ -16,17 +16,17 @@
         <meta property="og:site_name" content="I-Kang Ding's site" />
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="I-Kang Ding's site"/>
-        <meta property="og:url" content="https://ikding.github.io"/>
+        <meta property="og:url" content="."/>
         <meta property="og:description" content="I-Kang Ding's site"/>
 
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://ikding.github.io/theme/css/bootstrap.yeti.min.css" type="text/css"/>
-    <link href="https://ikding.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="./theme/css/bootstrap.yeti.min.css" type="text/css"/>
+    <link href="./theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://ikding.github.io/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://ikding.github.io/theme/css/style.css" type="text/css"/>
+    <link href="./theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="./theme/css/style.css" type="text/css"/>
 
 
 
@@ -42,19 +42,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="https://ikding.github.io/" class="navbar-brand">
+            <a href="./" class="navbar-brand">
 I-Kang Ding's site            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li><a href="https://ikding.github.io/pages/about-me.html">
+                         <li><a href="./pages/about-me.html">
                              About Me
                           </a></li>
-                         <li><a href="https://ikding.github.io/pages/resume.html">
+                         <li><a href="./pages/resume.html">
                              Resume
                           </a></li>
                         <li >
-                            <a href="https://ikding.github.io/category/career.html">Career</a>
+                            <a href="./category/career.html">Career</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -72,13 +72,13 @@ I-Kang Ding's site            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on I-Kang Ding's site</h1>
-        <li><a href="https://ikding.github.io/author/i-kang-ding.html">I-Kang Ding</a> (1)</li>
+        <li><a href="./author/i-kang-ding.html">I-Kang Ding</a> (1)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
 <div id="aboutme">
         <p>
-            <img width="100%" class="img-thumbnail" src="https://ikding.github.io//images/profile.jpg"/>
+            <img width="100%" class="img-thumbnail" src=".//images/profile.jpg"/>
         </p>
     <p>
       <strong>About I-Kang Ding</strong><br/>
@@ -134,13 +134,13 @@ Interested in data science, renewable energy, and climate change.
       </div>
    </div>
 </footer>
-<script src="https://ikding.github.io/theme/js/jquery.min.js"></script>
+<script src="./theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="https://ikding.github.io/theme/js/bootstrap.min.js"></script>
+<script src="./theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="https://ikding.github.io/theme/js/respond.min.js"></script>
+<script src="./theme/js/respond.min.js"></script>
 
 
 
@@ -150,7 +150,7 @@ $(document).ready(function () {
   if (!window.jXHR) {
     var jxhr = document.createElement('script');
     jxhr.type = 'text/javascript';
-    jxhr.src = 'https://ikding.github.io/theme/js/jXHR.js';
+    jxhr.src = './theme/js/jXHR.js';
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(jxhr, s);
   }
@@ -163,8 +163,25 @@ $(document).ready(function () {
   });
 });
 </script>
-<script src="https://ikding.github.io/theme/js/github.js" type="text/javascript"></script>
+<script src="./theme/js/github.js" type="text/javascript"></script>
 <!-- End GitHub JS Code -->
+    <!-- Google Analytics -->
+    <script type="text/javascript">
+
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-19568221-4']);
+        _gaq.push(['_trackPageview']);
+
+        (function () {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
+    <!-- End Google Analytics Code -->
 
 
 </body>
