--- a/pages/resume.html
+++ b/pages/resume.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="https://ikding.github.io/pages/resume.html">
+<link rel="canonical" href="../pages/resume.html">
 
         <meta name="author" content="I-Kang Ding" />
         <meta name="description" content="I-Kang Ding, Ph.D. ikding AT alumni DOT stanford DOT edu Summary Experienced data scientist passionate about leading talented data science teams to transform organizational processes and drive business value. Years of hands-on experience in the full lifecycle of machine learning models at scale, from business problem definition and refinement …" />
@@ -17,17 +17,17 @@
     <meta property="og:site_name" content="I-Kang Ding's site" />
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Resume"/>
-    <meta property="og:url" content="https://ikding.github.io/pages/resume.html"/>
+    <meta property="og:url" content="../pages/resume.html"/>
     <meta property="og:description" content="I-Kang Ding, Ph.D. ikding AT alumni DOT stanford DOT edu Summary Experienced data scientist passionate about leading talented data science teams to transform organizational processes and drive business value. Years of hands-on experience in the full lifecycle of machine learning models at scale, from business problem definition and refinement …" />
 
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://ikding.github.io/theme/css/bootstrap.yeti.min.css" type="text/css"/>
-    <link href="https://ikding.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="../theme/css/bootstrap.yeti.min.css" type="text/css"/>
+    <link href="../theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://ikding.github.io/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://ikding.github.io/theme/css/style.css" type="text/css"/>
+    <link href="../theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="../theme/css/style.css" type="text/css"/>
 
 
 
@@ -43,19 +43,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="https://ikding.github.io/" class="navbar-brand">
+            <a href="../" class="navbar-brand">
 I-Kang Ding's site            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li><a href="https://ikding.github.io/pages/about-me.html">
+                         <li><a href="../pages/about-me.html">
                              About Me
                           </a></li>
-                         <li class="active"><a href="https://ikding.github.io/pages/resume.html">
+                         <li class="active"><a href="../pages/resume.html">
                              Resume
                           </a></li>
                         <li >
-                            <a href="https://ikding.github.io/category/career.html">Career</a>
+                            <a href="../category/career.html">Career</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -147,7 +147,7 @@ I-Kang Ding's site            </a>
             <aside>
 <div id="aboutme">
         <p>
-            <img width="100%" class="img-thumbnail" src="https://ikding.github.io//images/profile.jpg"/>
+            <img width="100%" class="img-thumbnail" src="..//images/profile.jpg"/>
         </p>
     <p>
       <strong>About I-Kang Ding</strong><br/>
@@ -203,13 +203,13 @@ Interested in data science, renewable energy, and climate change.
       </div>
    </div>
 </footer>
-<script src="https://ikding.github.io/theme/js/jquery.min.js"></script>
+<script src="../theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="https://ikding.github.io/theme/js/bootstrap.min.js"></script>
+<script src="../theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="https://ikding.github.io/theme/js/respond.min.js"></script>
+<script src="../theme/js/respond.min.js"></script>
 
 
 
@@ -219,7 +219,7 @@ $(document).ready(function () {
   if (!window.jXHR) {
     var jxhr = document.createElement('script');
     jxhr.type = 'text/javascript';
-    jxhr.src = 'https://ikding.github.io/theme/js/jXHR.js';
+    jxhr.src = '../theme/js/jXHR.js';
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(jxhr, s);
   }
@@ -232,8 +232,25 @@ $(document).ready(function () {
   });
 });
 </script>
-<script src="https://ikding.github.io/theme/js/github.js" type="text/javascript"></script>
+<script src="../theme/js/github.js" type="text/javascript"></script>
 <!-- End GitHub JS Code -->
+    <!-- Google Analytics -->
+    <script type="text/javascript">
+
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-19568221-4']);
+        _gaq.push(['_trackPageview']);
+
+        (function () {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
+    <!-- End Google Analytics Code -->
 
 
 </body>
