--- a/thoughts-on-matsci-to-datasci.html
+++ b/thoughts-on-matsci-to-datasci.html
@@ -9,17 +9,17 @@
 
 
 
-<link rel="canonical" href="https://ikding.github.io/thoughts-on-matsci-to-datasci.html">
+<link rel="canonical" href="./thoughts-on-matsci-to-datasci.html">
 
         <meta name="author" content="I-Kang Ding" />
         <meta name="keywords" content="career" />
-        <meta name="description" content="I had a deep introspection about my career transition recently, and this tweet matches my experience pretty well. I also would like to share some thoughts on this topic as a former Materials Sci PhD who transitioned from clean tech to data science / machine learning. My PI at was working …" />
+        <meta name="description" content="I had a deep introspection about my career transition recently, and this tweet matches my experience pretty well. I also would like to share some thoughts on this topic as a former Materials Sci PhD who transitioned from clean tech to data science / machine learning. My PI at Stanford was …" />
 
         <meta property="og:site_name" content="I-Kang Ding's site" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Thoughts on my own career transition"/>
-        <meta property="og:url" content="https://ikding.github.io/thoughts-on-matsci-to-datasci.html"/>
-        <meta property="og:description" content="I had a deep introspection about my career transition recently, and this tweet matches my experience pretty well. I also would like to share some thoughts on this topic as a former Materials Sci PhD who transitioned from clean tech to data science / machine learning. My PI at was working …"/>
+        <meta property="og:url" content="./thoughts-on-matsci-to-datasci.html"/>
+        <meta property="og:description" content="I had a deep introspection about my career transition recently, and this tweet matches my experience pretty well. I also would like to share some thoughts on this topic as a former Materials Sci PhD who transitioned from clean tech to data science / machine learning. My PI at Stanford was …"/>
         <meta property="article:published_time" content="2019-12-28" />
             <meta property="article:section" content="career" />
             <meta property="article:tag" content="career" />
@@ -28,11 +28,11 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://ikding.github.io/theme/css/bootstrap.yeti.min.css" type="text/css"/>
-    <link href="https://ikding.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="./theme/css/bootstrap.yeti.min.css" type="text/css"/>
+    <link href="./theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://ikding.github.io/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://ikding.github.io/theme/css/style.css" type="text/css"/>
+    <link href="./theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="./theme/css/style.css" type="text/css"/>
 
 
 
@@ -48,19 +48,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="https://ikding.github.io/" class="navbar-brand">
+            <a href="./" class="navbar-brand">
 I-Kang Ding's site            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li><a href="https://ikding.github.io/pages/about-me.html">
+                         <li><a href="./pages/about-me.html">
                              About Me
                           </a></li>
-                         <li><a href="https://ikding.github.io/pages/resume.html">
+                         <li><a href="./pages/resume.html">
                              Resume
                           </a></li>
                         <li class="active">
-                            <a href="https://ikding.github.io/category/career.html">Career</a>
+                            <a href="./category/career.html">Career</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -81,7 +81,7 @@ I-Kang Ding's site            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="https://ikding.github.io/thoughts-on-matsci-to-datasci.html"
+                    <a href="./thoughts-on-matsci-to-datasci.html"
                        rel="bookmark"
                        title="Permalink to Thoughts on my own career transition">
                         Thoughts on my own career transition
@@ -102,12 +102,12 @@ I-Kang Ding's site            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="https://ikding.github.io/tag/career.html">career</a>
+	<a href="./tag/career.html">career</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
                 <p>I had a deep introspection about my career transition recently, and this tweet matches my experience pretty well. I also would like to share some thoughts on this topic as a former Materials Sci PhD who transitioned from clean tech to data science / machine learning.</p>
-<p>My PI at was working on the physics and materials of advanced solar cells. By that virtue, almost all of us are driven by the virtue of clean energy and climate change impact, and spent 5+ years learning about the in-and-outs of solar cells.</p>
+<p>My PI at Stanford was working on the physics and materials of advanced solar cells. By that virtue, almost all of us are driven by the virtue of clean energy and climate change impact, and spent 5+ years learning about the in-and-outs of solar cells.</p>
 <p>When I entered the job market after my PhD in 2011, I joined a solar cell startup, wanting to put my passion on climate change and my domain expertise on solar cells to good use. But after clean tech 1.0 wave died in 2011-12, clean tech jobs were few and far in between in the SV. (trivia: Solyndra collapsed within a month or two after I started my new job).</p>
 <p>And you can’t help but feeling being out-competed by software engineers on housing, daycare, etc. You hear about so many stories from your colleagues of being outbid on housing, or had to endure 1.5+ hr (one-way) commute to save on housing cost, and you get discouraged.</p>
 <p>Plus, as a sector, clean tech manufacturing like PV and LEDs are just tough businesses to be in. Your product is a commodity, facing increasing competition from Asia. During my second job (my employer at the time was top-3 LED manufacturer by revenue in the world), LED chip sales price falls 20%-40% YoY; solar cell prices ($/W) during this time probably drops at similar rate. It is great news for downstream installers and customers, but it puts a huge pressure on our employers’ profitability, and accordingly, employee’s compensation.</p>
@@ -127,7 +127,7 @@ I-Kang Ding's site            </a>
             <aside>
 <div id="aboutme">
         <p>
-            <img width="100%" class="img-thumbnail" src="https://ikding.github.io//images/profile.jpg"/>
+            <img width="100%" class="img-thumbnail" src=".//images/profile.jpg"/>
         </p>
     <p>
       <strong>About I-Kang Ding</strong><br/>
@@ -183,13 +183,13 @@ Interested in data science, renewable energy, and climate change.
       </div>
    </div>
 </footer>
-<script src="https://ikding.github.io/theme/js/jquery.min.js"></script>
+<script src="./theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="https://ikding.github.io/theme/js/bootstrap.min.js"></script>
+<script src="./theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="https://ikding.github.io/theme/js/respond.min.js"></script>
+<script src="./theme/js/respond.min.js"></script>
 
 
 
@@ -199,7 +199,7 @@ $(document).ready(function () {
   if (!window.jXHR) {
     var jxhr = document.createElement('script');
     jxhr.type = 'text/javascript';
-    jxhr.src = 'https://ikding.github.io/theme/js/jXHR.js';
+    jxhr.src = './theme/js/jXHR.js';
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(jxhr, s);
   }
@@ -212,8 +212,25 @@ $(document).ready(function () {
   });
 });
 </script>
-<script src="https://ikding.github.io/theme/js/github.js" type="text/javascript"></script>
+<script src="./theme/js/github.js" type="text/javascript"></script>
 <!-- End GitHub JS Code -->
+    <!-- Google Analytics -->
+    <script type="text/javascript">
+
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-19568221-4']);
+        _gaq.push(['_trackPageview']);
+
+        (function () {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
+    <!-- End Google Analytics Code -->
 
 
 </body>
