--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="../pages/about-me.html">
+<link rel="canonical" href="https://ikding.github.io/pages/about-me.html">
 
         <meta name="author" content="I-Kang Ding" />
         <meta name="description" content="I am a data scientist at Capital One, where my work focuses on developing and deploying machine learning models to fight various types of credit card fraud. Previously, I worked as a data scientist at Lumileds, global top 3 LED manufacturer, on automating data analysis pipelines and building machine learning …" />
@@ -17,17 +17,17 @@
     <meta property="og:site_name" content="I-Kang Ding's site" />
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="About Me"/>
-    <meta property="og:url" content="../pages/about-me.html"/>
+    <meta property="og:url" content="https://ikding.github.io/pages/about-me.html"/>
     <meta property="og:description" content="I am a data scientist at Capital One, where my work focuses on developing and deploying machine learning models to fight various types of credit card fraud. Previously, I worked as a data scientist at Lumileds, global top 3 LED manufacturer, on automating data analysis pipelines and building machine learning …" />
 
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="../theme/css/bootstrap.yeti.min.css" type="text/css"/>
-    <link href="../theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://ikding.github.io/theme/css/bootstrap.yeti.min.css" type="text/css"/>
+    <link href="https://ikding.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="../theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="../theme/css/style.css" type="text/css"/>
+    <link href="https://ikding.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://ikding.github.io/theme/css/style.css" type="text/css"/>
 
 
 
@@ -43,19 +43,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="../" class="navbar-brand">
+            <a href="https://ikding.github.io/" class="navbar-brand">
 I-Kang Ding's site            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li class="active"><a href="../pages/about-me.html">
+                         <li class="active"><a href="https://ikding.github.io/pages/about-me.html">
                              About Me
                           </a></li>
-                         <li><a href="../pages/resume.html">
+                         <li><a href="https://ikding.github.io/pages/resume.html">
                              Resume
                           </a></li>
                         <li >
-                            <a href="../category/career.html">Career</a>
+                            <a href="https://ikding.github.io/category/career.html">Career</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -93,7 +93,7 @@ I originally hails from Taiwan and received my Ph.D. from Stanford University, a
             <aside>
 <div id="aboutme">
         <p>
-            <img width="100%" class="img-thumbnail" src="..//images/profile.jpg"/>
+            <img width="100%" class="img-thumbnail" src="https://ikding.github.io//images/profile.jpg"/>
         </p>
     <p>
       <strong>About I-Kang Ding</strong><br/>
@@ -149,13 +149,13 @@ Interested in data science, renewable energy, and climate change.
       </div>
    </div>
 </footer>
-<script src="../theme/js/jquery.min.js"></script>
+<script src="https://ikding.github.io/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="../theme/js/bootstrap.min.js"></script>
+<script src="https://ikding.github.io/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="../theme/js/respond.min.js"></script>
+<script src="https://ikding.github.io/theme/js/respond.min.js"></script>
 
 
 
@@ -165,7 +165,7 @@ $(document).ready(function () {
   if (!window.jXHR) {
     var jxhr = document.createElement('script');
     jxhr.type = 'text/javascript';
-    jxhr.src = '../theme/js/jXHR.js';
+    jxhr.src = 'https://ikding.github.io/theme/js/jXHR.js';
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(jxhr, s);
   }
@@ -178,7 +178,7 @@ $(document).ready(function () {
   });
 });
 </script>
-<script src="../theme/js/github.js" type="text/javascript"></script>
+<script src="https://ikding.github.io/theme/js/github.js" type="text/javascript"></script>
 <!-- End GitHub JS Code -->
     <!-- Google Analytics -->
     <script type="text/javascript">
