--- a/authors.html
+++ b/authors.html
@@ -56,6 +56,12 @@ I-Kang Ding's site            </a>
                         <li >
                             <a href="https://ikding.github.io/category/career.html">Career</a>
                         </li>
+                        <li >
+                            <a href="https://ikding.github.io/category/climate.html">Climate</a>
+                        </li>
+                        <li >
+                            <a href="https://ikding.github.io/category/data_science.html">Data_science</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
@@ -72,7 +78,7 @@ I-Kang Ding's site            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on I-Kang Ding's site</h1>
-        <li><a href="https://ikding.github.io/author/i-kang-ding.html">I-Kang Ding</a> (2)</li>
+        <li><a href="https://ikding.github.io/author/i-kang-ding.html">I-Kang Ding</a> (4)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
