--- a/pages/resume.html
+++ b/pages/resume.html
@@ -57,6 +57,12 @@ I-Kang Ding's site            </a>
                         <li >
                             <a href="https://ikding.github.io/category/career.html">Career</a>
                         </li>
+                        <li >
+                            <a href="https://ikding.github.io/category/climate.html">Climate</a>
+                        </li>
+                        <li >
+                            <a href="https://ikding.github.io/category/data_science.html">Data_science</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
