Add articles from quora

--- a/pycon-talk-2019.html
+++ b/pycon-talk-2019.html
@@ -62,11 +62,11 @@ I-Kang Ding's site            </a>
                         <li >
                             <a href="https://ikding.github.io/category/career.html">Career</a>
                         </li>
-                        <li >
-                            <a href="https://ikding.github.io/category/climate.html">Climate</a>
-                        </li>
                         <li class="active">
                             <a href="https://ikding.github.io/category/data_science.html">Data_science</a>
+                        </li>
+                        <li >
+                            <a href="https://ikding.github.io/category/solar.html">Solar</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
