--- a/matsci-to-datasci-transition.html
+++ b/matsci-to-datasci-transition.html
@@ -64,10 +64,10 @@ I-Kang Ding's site            </a>
                             <a href="https://ikding.github.io/category/career.html">Career</a>
                         </li>
                         <li >
-                            <a href="https://ikding.github.io/category/climate.html">Climate</a>
+                            <a href="https://ikding.github.io/category/data_science.html">Data_science</a>
                         </li>
                         <li >
-                            <a href="https://ikding.github.io/category/data_science.html">Data_science</a>
+                            <a href="https://ikding.github.io/category/solar.html">Solar</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
