--- a/perovskites-solar-cell-star-material.html
+++ b/perovskites-solar-cell-star-material.html
@@ -12,7 +12,7 @@
 <link rel="canonical" href="https://ikding.github.io/perovskites-solar-cell-star-material.html">
 
         <meta name="author" content="I-Kang Ding" />
-        <meta name="keywords" content="climate" />
+        <meta name="keywords" content="solar" />
         <meta name="description" content="Came across the article on Nature, The reality behind solar power&#39;s next star material. Perovskites solar cells has came a long way since my PhD research. I remember my excitement when my solid state dye-sensitized solar cells (predecessor to perovskites solar cells) cracked 4% efficiency... and now the single junction …" />
 
         <meta property="og:site_name" content="I-Kang Ding's site" />
@@ -21,8 +21,8 @@
         <meta property="og:url" content="https://ikding.github.io/perovskites-solar-cell-star-material.html"/>
         <meta property="og:description" content="Came across the article on Nature, The reality behind solar power&#39;s next star material. Perovskites solar cells has came a long way since my PhD research. I remember my excitement when my solid state dye-sensitized solar cells (predecessor to perovskites solar cells) cracked 4% efficiency... and now the single junction …"/>
         <meta property="article:published_time" content="2019-06-28" />
-            <meta property="article:section" content="climate" />
-            <meta property="article:tag" content="climate" />
+            <meta property="article:section" content="solar" />
+            <meta property="article:tag" content="solar" />
             <meta property="article:author" content="I-Kang Ding" />
 
 
@@ -62,11 +62,11 @@ I-Kang Ding's site            </a>
                         <li >
                             <a href="https://ikding.github.io/category/career.html">Career</a>
                         </li>
-                        <li class="active">
-                            <a href="https://ikding.github.io/category/climate.html">Climate</a>
-                        </li>
                         <li >
                             <a href="https://ikding.github.io/category/data_science.html">Data_science</a>
+                        </li>
+                        <li class="active">
+                            <a href="https://ikding.github.io/category/solar.html">Solar</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -108,7 +108,7 @@ I-Kang Ding's site            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="https://ikding.github.io/tag/climate.html">climate</a>
+	<a href="https://ikding.github.io/tag/solar.html">solar</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
