add article on compare-countries-to-us-states

--- a/authors.html
+++ b/authors.html
@@ -60,6 +60,9 @@ I-Kang Ding's site            </a>
                             <a href="https://ikding.github.io/category/data_science.html">Data_science</a>
                         </li>
                         <li >
+                            <a href="https://ikding.github.io/category/random.html">Random</a>
+                        </li>
+                        <li >
                             <a href="https://ikding.github.io/category/solar.html">Solar</a>
                         </li>
             </ul>
@@ -78,7 +81,7 @@ I-Kang Ding's site            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on I-Kang Ding's site</h1>
-        <li><a href="https://ikding.github.io/author/i-kang-ding.html">I-Kang Ding</a> (24)</li>
+        <li><a href="https://ikding.github.io/author/i-kang-ding.html">I-Kang Ding</a> (25)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -132,7 +135,7 @@ Interested in data science, renewable energy, and climate change.
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2019 I-Kang Ding
+         <div class="col-xs-10">&copy; 2020 I-Kang Ding
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
