--- a/perovskites-solar-cell-star-material.html
+++ b/perovskites-solar-cell-star-material.html
@@ -65,6 +65,9 @@ I-Kang Ding's site            </a>
                         <li >
                             <a href="https://ikding.github.io/category/data_science.html">Data_science</a>
                         </li>
+                        <li >
+                            <a href="https://ikding.github.io/category/random.html">Random</a>
+                        </li>
                         <li class="active">
                             <a href="https://ikding.github.io/category/solar.html">Solar</a>
                         </li>
@@ -204,7 +207,7 @@ Interested in data science, renewable energy, and climate change.
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2019 I-Kang Ding
+         <div class="col-xs-10">&copy; 2020 I-Kang Ding
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
