--- a/thoughts-on-matsci-to-datasci.html
+++ b/thoughts-on-matsci-to-datasci.html
@@ -53,11 +53,9 @@ I-Kang Ding's site            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                    <li><a href="/resume/">Resume</a></li>
                          <li><a href="https://ikding.github.io/pages/about-me.html">
                              About Me
-                          </a></li>
-                         <li><a href="https://ikding.github.io/pages/resume.html">
-                             Resume
                           </a></li>
                         <li class="active">
                             <a href="https://ikding.github.io/category/career.html">Career</a>
