--- a/should-i-transition-to-data-science.html
+++ b/should-i-transition-to-data-science.html
@@ -53,22 +53,13 @@ I-Kang Ding's site            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                    <li><a href="/pages/about-me.html">About Me</a></li>
                     <li><a href="/resume/">Resume</a></li>
-                         <li><a href="https://ikding.github.io/pages/about-me.html">
-                             About Me
-                          </a></li>
-                        <li class="active">
-                            <a href="https://ikding.github.io/category/career.html">Career</a>
-                        </li>
-                        <li >
-                            <a href="https://ikding.github.io/category/data_science.html">Data_science</a>
-                        </li>
-                        <li >
-                            <a href="https://ikding.github.io/category/random.html">Random</a>
-                        </li>
-                        <li >
-                            <a href="https://ikding.github.io/category/solar.html">Solar</a>
-                        </li>
+                    <li><a href="/category/career.html">Career</a></li>
+                    <li><a href="/category/data_science.html">Data Science</a></li>
+                    <li><a href="/category/solar.html">Solar</a></li>
+                    <li><a href="/category/random.html">Random</a></li>
+                    <li><a href="/archives.html">Archives</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
