Change category/ to tag/ in navbar; add neurIPS notes

--- a/authors.html
+++ b/authors.html
@@ -49,10 +49,10 @@ I-Kang Ding's site            </a>
             <ul class="nav navbar-nav">
                     <li><a href="/pages/about-me.html">About Me</a></li>
                     <li><a href="/resume/">Resume</a></li>
-                    <li><a href="/category/career.html">Career Development</a></li>
-                    <li><a href="/category/data_science.html">Data Science</a></li>
-                    <li><a href="/category/climate_tech.html">Climate Tech</a></li>
-                    <li><a href="/category/misc.html">Misc</a></li>
+                    <li><a href="/tag/career.html">Career Development</a></li>
+                    <li><a href="/tag/data_science.html">Data Science</a></li>
+                    <li><a href="/tag/climate_tech.html">Climate Tech</a></li>
+                    <li><a href="/tag/misc.html">Misc</a></li>
                     <li><a href="/archives.html">Archives</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -70,7 +70,7 @@ I-Kang Ding's site            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on I-Kang Ding's site</h1>
-        <li><a href="https://ikding.github.io/author/i-kang-ding.html">I-Kang Ding</a> (26)</li>
+        <li><a href="https://ikding.github.io/author/i-kang-ding.html">I-Kang Ding</a> (27)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
