--- a/pycon-talk-2019.html
+++ b/pycon-talk-2019.html
@@ -55,10 +55,10 @@ I-Kang Ding's site            </a>
             <ul class="nav navbar-nav">
                     <li><a href="/pages/about-me.html">About Me</a></li>
                     <li><a href="/resume/">Resume</a></li>
-                    <li><a href="/category/career.html">Career Development</a></li>
-                    <li><a href="/category/data_science.html">Data Science</a></li>
-                    <li><a href="/category/climate_tech.html">Climate Tech</a></li>
-                    <li><a href="/category/misc.html">Misc</a></li>
+                    <li><a href="/tag/career.html">Career Development</a></li>
+                    <li><a href="/tag/data_science.html">Data Science</a></li>
+                    <li><a href="/tag/climate_tech.html">Climate Tech</a></li>
+                    <li><a href="/tag/misc.html">Misc</a></li>
                     <li><a href="/archives.html">Archives</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
