Tweak 'about'; add a16z ai notes; minor typo fix

--- a/cpv-commercialization.html
+++ b/cpv-commercialization.html
@@ -169,7 +169,7 @@ I-Kang Ding's site            </a>
     <p>
       <strong>About I-Kang Ding</strong><br/>
         
-Data Science Manager at Capital One, focused on anti-fraud ML models.
+Doing data mining on mining data at KoBold Metals.
 Stanford Engineering Ph.D.
 <br/>
 <br/>
