--- a/authors.html
+++ b/authors.html
@@ -70,7 +70,7 @@ I-Kang Ding's site            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on I-Kang Ding's site</h1>
-        <li><a href="https://ikding.github.io/author/i-kang-ding.html">I-Kang Ding</a> (29)</li>
+        <li><a href="https://ikding.github.io/author/i-kang-ding.html">I-Kang Ding</a> (30)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -81,7 +81,7 @@ I-Kang Ding's site            </a>
     <p>
       <strong>About I-Kang Ding</strong><br/>
         
-Data Science Manager at Capital One, focused on anti-fraud ML models.
+Doing data mining on mining data at KoBold Metals.
 Stanford Engineering Ph.D.
 <br/>
 <br/>
