--- a/deep-tech-in-energy.html
+++ b/deep-tech-in-energy.html
@@ -149,7 +149,7 @@ I-Kang Ding's site            </a>
 <p>Thirdly, if you have to thread the needle on more than one area of &quot;novel innovations&quot;, the risk of your startup goes up exponentially. My cynical measure of this is the &quot;cans-of-worms&quot; meter. Check first how many criteria a startup satisfies:</p>
 <ul class="simple">
 <li>New materials (as opposed to commonly used and studied materials)</li>
-<li>New manufacturing processes (as opposed incompatible with existing state-of-art manufacturing processes)</li>
+<li>New manufacturing processes (as opposed to compatibility with existing state-of-art manufacturing processes)</li>
 <li>New, custom-designed equipment (as opposed to off-the-shelf equipments from a reputed equipment manufacturer)</li>
 </ul>
 <p>Now, consult the table below to map the number of boxes you checked, to the &quot;cans-of-worms&quot; meter:</p>
@@ -234,7 +234,7 @@ I-Kang Ding's site            </a>
     <p>
       <strong>About I-Kang Ding</strong><br/>
         
-Data Science Manager at Capital One, focused on anti-fraud ML models.
+Doing data mining on mining data at KoBold Metals.
 Stanford Engineering Ph.D.
 <br/>
 <br/>
