Add tag to an old article

--- a/should-i-transition-to-data-science.html
+++ b/should-i-transition-to-data-science.html
@@ -12,7 +12,7 @@
 <link rel="canonical" href="https://ikding.github.io/should-i-transition-to-data-science.html">
 
         <meta name="author" content="I-Kang Ding" />
-        <meta name="keywords" content="career" />
+        <meta name="keywords" content="career,data_science" />
         <meta name="description" content="Question Career Advice: Should I stay in nanomaterials, or move into data science? Answer I made a similar career transition a year ago, from optoelectronic semiconductors to data science at a bank. There were several reasons behind my rationale for the transition, which could be selling points for transitioning to …" />
 
         <meta property="og:site_name" content="I-Kang Ding's site" />
@@ -23,6 +23,7 @@
         <meta property="article:published_time" content="2016-03-02" />
             <meta property="article:section" content="career" />
             <meta property="article:tag" content="career" />
+            <meta property="article:tag" content="data_science" />
             <meta property="article:author" content="I-Kang Ding" />
 
 
@@ -104,6 +105,8 @@ I-Kang Ding's site            </a>
 
 <span class="label label-default">Tags</span>
 	<a href="https://ikding.github.io/tag/career.html">career</a>
+        /
+	<a href="https://ikding.github.io/tag/data_science.html">data_science</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
