--- a/new-business-of-ai-a16z.html
+++ b/new-business-of-ai-a16z.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>The New Business of AI (and How It's Different From Traditional Software) - a16z - I-Kang Ding's site</title>
+    <title>The New Business of AI (and How It's Different From Traditional Software) - a16z - I-Kang's Notes</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -15,7 +15,7 @@
         <meta name="keywords" content="data_science" />
         <meta name="description" content="This is my personal highlights from reading &#34;The New Business of AI (and How It&#39;s Different From Traditional Software)&#34;, which was published on Andreessen Horowitz blog. This article is superbly written, and is a great resource for machine learning professionals evaluating their next job opportunities." />
 
-        <meta property="og:site_name" content="I-Kang Ding's site" />
+        <meta property="og:site_name" content="I-Kang's Notes" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="The New Business of AI (and How It&#39;s Different From Traditional Software) - a16z"/>
         <meta property="og:url" content="https://ikding.github.io/new-business-of-ai-a16z.html"/>
@@ -31,7 +31,7 @@
         <link rel="stylesheet" href="https://ikding.github.io/theme/css/bootstrap.yeti.min.css" type="text/css"/>
     <link href="https://ikding.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://ikding.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link href="https://ikding.github.io/theme/css/pygments/monokai.css" rel="stylesheet">
     <link rel="stylesheet" href="https://ikding.github.io/theme/css/style.css" type="text/css"/>
 
 
@@ -49,7 +49,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="https://ikding.github.io/" class="navbar-brand">
-I-Kang Ding's site            </a>
+I-Kang's Notes            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
