--- a/perovskite-solar-cells-development.html
+++ b/perovskite-solar-cells-development.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>Development of a perovskite solar cells industry - I-Kang Ding's site</title>
+    <title>Development of a perovskite solar cells industry - I-Kang's Notes</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -15,7 +15,7 @@
         <meta name="keywords" content="climate_tech" />
         <meta name="description" content="Question Are solar energy companies considering using perovskite solar cells? Answer My PhD research is on solid-state dye-sensitized solar cells, a precursor to the perovskite solar cells, and I have worked in solar energy research for 6+ years. Here is my understanding. Perovskites solar cells has seen tremendous efficiency improvements …" />
 
-        <meta property="og:site_name" content="I-Kang Ding's site" />
+        <meta property="og:site_name" content="I-Kang's Notes" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Development of a perovskite solar cells industry"/>
         <meta property="og:url" content="https://ikding.github.io/perovskite-solar-cells-development.html"/>
@@ -31,7 +31,7 @@
         <link rel="stylesheet" href="https://ikding.github.io/theme/css/bootstrap.yeti.min.css" type="text/css"/>
     <link href="https://ikding.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://ikding.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link href="https://ikding.github.io/theme/css/pygments/monokai.css" rel="stylesheet">
     <link rel="stylesheet" href="https://ikding.github.io/theme/css/style.css" type="text/css"/>
 
 
@@ -49,7 +49,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="https://ikding.github.io/" class="navbar-brand">
-I-Kang Ding's site            </a>
+I-Kang's Notes            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
