--- a/pycon-talk-2019.html
+++ b/pycon-talk-2019.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>My PyCon 2019 talk - I-Kang Ding's site</title>
+    <title>My PyCon 2019 talk - I-Kang's Notes</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -15,7 +15,7 @@
         <meta name="keywords" content="data_science" />
         <meta name="description" content="I and two Capital One colleagues (Ariel M&#39;ndange-Pfupfu and Marina Sergeeva) gave a talk at PyCon 2019 titled Lessons learned from building a community of Python users among thousands of analysts. This talk highlighted our multi-pronged approaches to overcome organizational inertia to build a community of Python users, provide Python …" />
 
-        <meta property="og:site_name" content="I-Kang Ding's site" />
+        <meta property="og:site_name" content="I-Kang's Notes" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="My PyCon 2019 talk"/>
         <meta property="og:url" content="https://ikding.github.io/pycon-talk-2019.html"/>
@@ -31,7 +31,7 @@
         <link rel="stylesheet" href="https://ikding.github.io/theme/css/bootstrap.yeti.min.css" type="text/css"/>
     <link href="https://ikding.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://ikding.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link href="https://ikding.github.io/theme/css/pygments/monokai.css" rel="stylesheet">
     <link rel="stylesheet" href="https://ikding.github.io/theme/css/style.css" type="text/css"/>
 
 
@@ -49,7 +49,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="https://ikding.github.io/" class="navbar-brand">
-I-Kang Ding's site            </a>
+I-Kang's Notes            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
