--- a/authors.html
+++ b/authors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>Authors - I-Kang Ding's site</title>
+    <title>Authors - I-Kang's Notes</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -13,11 +13,11 @@
         <meta name="author" content="I-Kang Ding" />
 
     <!-- Open Graph tags -->
-        <meta property="og:site_name" content="I-Kang Ding's site" />
+        <meta property="og:site_name" content="I-Kang's Notes" />
         <meta property="og:type" content="website"/>
-        <meta property="og:title" content="I-Kang Ding's site"/>
+        <meta property="og:title" content="I-Kang's Notes"/>
         <meta property="og:url" content="https://ikding.github.io"/>
-        <meta property="og:description" content="I-Kang Ding's site"/>
+        <meta property="og:description" content="I-Kang's Notes"/>
 
 
 
@@ -25,7 +25,7 @@
         <link rel="stylesheet" href="https://ikding.github.io/theme/css/bootstrap.yeti.min.css" type="text/css"/>
     <link href="https://ikding.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://ikding.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link href="https://ikding.github.io/theme/css/pygments/monokai.css" rel="stylesheet">
     <link rel="stylesheet" href="https://ikding.github.io/theme/css/style.css" type="text/css"/>
 
 
@@ -43,7 +43,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="https://ikding.github.io/" class="navbar-brand">
-I-Kang Ding's site            </a>
+I-Kang's Notes            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
@@ -69,8 +69,8 @@ I-Kang Ding's site            </a>
 <div class="container">
     <div class="row">
         <div class="col-sm-9">
-  <h1>Authors on I-Kang Ding's site</h1>
-        <li><a href="https://ikding.github.io/author/i-kang-ding.html">I-Kang Ding</a> (39)</li>
+  <h1>Authors on I-Kang's Notes</h1>
+        <li><a href="https://ikding.github.io/author/i-kang-ding.html">I-Kang Ding</a> (40)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
