--- a/data-science-new-degree-needed.html
+++ b/data-science-new-degree-needed.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>Do you need a data science degree for data science jobs? - I-Kang Ding's site</title>
+    <title>Do you need a data science degree for data science jobs? - I-Kang's Notes</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -15,7 +15,7 @@
         <meta name="keywords" content="career,data_science" />
         <meta name="description" content="Question Do employers looking for a data analyst, data scientist, or data engineer care if you obtain a new degree in a subject like data science that includes machine learning, etc.? Answer Having interviewed many data scientist candidates at Capital One, I can say that we care more about &#34;whether …" />
 
-        <meta property="og:site_name" content="I-Kang Ding's site" />
+        <meta property="og:site_name" content="I-Kang's Notes" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Do you need a data science degree for data science jobs?"/>
         <meta property="og:url" content="https://ikding.github.io/data-science-new-degree-needed.html"/>
@@ -32,7 +32,7 @@
         <link rel="stylesheet" href="https://ikding.github.io/theme/css/bootstrap.yeti.min.css" type="text/css"/>
     <link href="https://ikding.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://ikding.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link href="https://ikding.github.io/theme/css/pygments/monokai.css" rel="stylesheet">
     <link rel="stylesheet" href="https://ikding.github.io/theme/css/style.css" type="text/css"/>
 
 
@@ -50,7 +50,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="https://ikding.github.io/" class="navbar-brand">
-I-Kang Ding's site            </a>
+I-Kang's Notes            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
