--- a/deep-tech-in-energy.html
+++ b/deep-tech-in-energy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>"Shelves of cans of worms" - why deep-tech in energy is tough - I-Kang Ding's site</title>
+    <title>"Shelves of cans of worms" - why deep-tech in energy is tough - I-Kang's Notes</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -15,7 +15,7 @@
         <meta name="keywords" content="climate_tech" />
         <meta name="description" content="Reminiscing about first decade of my career in materials science and deep-tech energy companies, and what I learned about the sector. (Also: what software companies and fruit flies have in common, and why working on deep tech energy technologies can feel like opening cans of worms all day.)" />
 
-        <meta property="og:site_name" content="I-Kang Ding's site" />
+        <meta property="og:site_name" content="I-Kang's Notes" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="&#34;Shelves of cans of worms&#34; - why deep-tech in energy is tough"/>
         <meta property="og:url" content="https://ikding.github.io/deep-tech-in-energy.html"/>
@@ -31,7 +31,7 @@
         <link rel="stylesheet" href="https://ikding.github.io/theme/css/bootstrap.yeti.min.css" type="text/css"/>
     <link href="https://ikding.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://ikding.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link href="https://ikding.github.io/theme/css/pygments/monokai.css" rel="stylesheet">
     <link rel="stylesheet" href="https://ikding.github.io/theme/css/style.css" type="text/css"/>
 
 
@@ -49,7 +49,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="https://ikding.github.io/" class="navbar-brand">
-I-Kang Ding's site            </a>
+I-Kang's Notes            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
