--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>About Me - I-Kang Ding's site</title>
+    <title>About Me - I-Kang's Notes</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -14,7 +14,7 @@
         <meta name="author" content="I-Kang Ding" />
         <meta name="description" content="I am a data scientist and machine learning engineer who has over a decade of experience in a variety of fields, including financial services, optoelectronic semiconductor manufacturing, and solar cell R&amp;D. I have years hands-on experience in the full lifecycle of machine learning models at scale, from business problem …" />
 
-    <meta property="og:site_name" content="I-Kang Ding's site" />
+    <meta property="og:site_name" content="I-Kang's Notes" />
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="About Me"/>
     <meta property="og:url" content="https://ikding.github.io/pages/about-me.html"/>
@@ -26,7 +26,7 @@
         <link rel="stylesheet" href="https://ikding.github.io/theme/css/bootstrap.yeti.min.css" type="text/css"/>
     <link href="https://ikding.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://ikding.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link href="https://ikding.github.io/theme/css/pygments/monokai.css" rel="stylesheet">
     <link rel="stylesheet" href="https://ikding.github.io/theme/css/style.css" type="text/css"/>
 
 
@@ -44,7 +44,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="https://ikding.github.io/" class="navbar-brand">
-I-Kang Ding's site            </a>
+I-Kang's Notes            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
