--- a/perovskites-solar-cell-star-material.html
+++ b/perovskites-solar-cell-star-material.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>Nature article on perovskites solar cells - I-Kang Ding's site</title>
+    <title>Nature article on perovskites solar cells - I-Kang's Notes</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -15,7 +15,7 @@
         <meta name="keywords" content="climate_tech" />
         <meta name="description" content="Came across the article on Nature, The reality behind solar power&#39;s next star material. Perovskites solar cells has came a long way since my PhD research. I remember my excitement when my solid state dye-sensitized solar cells (predecessor to perovskites solar cells) cracked 4% efficiency... and now the single junction …" />
 
-        <meta property="og:site_name" content="I-Kang Ding's site" />
+        <meta property="og:site_name" content="I-Kang's Notes" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Nature article on perovskites solar cells"/>
         <meta property="og:url" content="https://ikding.github.io/perovskites-solar-cell-star-material.html"/>
@@ -31,7 +31,7 @@
         <link rel="stylesheet" href="https://ikding.github.io/theme/css/bootstrap.yeti.min.css" type="text/css"/>
     <link href="https://ikding.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://ikding.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link href="https://ikding.github.io/theme/css/pygments/monokai.css" rel="stylesheet">
     <link rel="stylesheet" href="https://ikding.github.io/theme/css/style.css" type="text/css"/>
 
 
@@ -49,7 +49,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="https://ikding.github.io/" class="navbar-brand">
-I-Kang Ding's site            </a>
+I-Kang's Notes            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
