--- a/what-do-experienced-data-scientist-know.html
+++ b/what-do-experienced-data-scientist-know.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>What do experienced data scientist know? - I-Kang Ding's site</title>
+    <title>What do experienced data scientist know? - I-Kang's Notes</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -15,7 +15,7 @@
         <meta name="keywords" content="data_science" />
         <meta name="description" content="Question As a data scientist, what tips would you have for a younger version of yourself? Answer &#34;Honey badger doesn&#39;t care&#34;: In majority of the cases, your business stakeholders won&#39;t really care on how you did it. You really have to distill the insight and explain the insight in laymen&#39;s …" />
 
-        <meta property="og:site_name" content="I-Kang Ding's site" />
+        <meta property="og:site_name" content="I-Kang's Notes" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="What do experienced data scientist know?"/>
         <meta property="og:url" content="https://ikding.github.io/what-do-experienced-data-scientist-know.html"/>
@@ -31,7 +31,7 @@
         <link rel="stylesheet" href="https://ikding.github.io/theme/css/bootstrap.yeti.min.css" type="text/css"/>
     <link href="https://ikding.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://ikding.github.io/theme/css/pygments/native.css" rel="stylesheet">
+    <link href="https://ikding.github.io/theme/css/pygments/monokai.css" rel="stylesheet">
     <link rel="stylesheet" href="https://ikding.github.io/theme/css/style.css" type="text/css"/>
 
 
@@ -49,7 +49,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="https://ikding.github.io/" class="navbar-brand">
-I-Kang Ding's site            </a>
+I-Kang's Notes            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
