Tweak pelican readtime article summary

--- a/pelican-readtime-plugin.html
+++ b/pelican-readtime-plugin.html
@@ -13,13 +13,13 @@
 
         <meta name="author" content="I-Kang Ding" />
         <meta name="keywords" content="data_science" />
-        <meta name="description" content="How to add readtime plugin in pelican" />
+        <meta name="description" content="How to use pelican readtime plugin in Pelican static site generator" />
 
         <meta property="og:site_name" content="I-Kang's Notes" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Pelican Readtime Plugin"/>
         <meta property="og:url" content="https://ikding.github.io/pelican-readtime-plugin.html"/>
-        <meta property="og:description" content="How to add readtime plugin in pelican"/>
+        <meta property="og:description" content="How to use pelican readtime plugin in Pelican static site generator"/>
         <meta property="article:published_time" content="2020-04-18" />
             <meta property="article:section" content="data_science" />
             <meta property="article:tag" content="data_science" />
