Add ICLR notes and thoughts; minor tweak on bio

--- a/deep-tech-in-energy.html
+++ b/deep-tech-in-energy.html
@@ -184,7 +184,7 @@ I-Kang's Notes            </a>
 </div>
 <div class="section" id="so-where-does-that-leave-us">
 <h2>So, where does that leave us?</h2>
-<img alt="xkcd-it-has-come-to-this" class="align-center" src="https://imgs.xkcd.com/comics/so_it_has_come_to_this.png" />
+<a class="reference external image-reference" href="https://xkcd.com/1022/"><img alt="xkcd-so-it-has-come-to-this" class="align-center" src="https://imgs.xkcd.com/comics/so_it_has_come_to_this.png" /></a>
 <p>I did not want this post to end on a note of defeatism. Rather, the purpose of this post is to highlight notable differences on the risk profile and resource requirements between software companies and deep-tech hardware companies in energy.</p>
 <p>Furthermore, there are still many areas in climate tech that would be profoundly impacted by deep-tech materials breakthroughs, such as grid scale energy storage, geothermal, industrial heat (used in cement &amp; steel manufacturing), etc. But these breakthroughs will take longer and more resources than what most of silicon valley VC's are used to. While the recent resurgence of interest and startup activities in climate change is extremely encouraging and much needed, I hope we are all being clear-eyed about what the journey entails, especially if we were to take on the deep-tech breakthroughs in energy.</p>
 </div>
@@ -238,7 +238,7 @@ Doing data mining on mining data at KoBold Metals.
 Stanford Engineering Ph.D.
 <br/>
 <br/>
-Interested in machine learning, Python, and climate change.
+Interested in intersection of machine learning, data science, and climate change.
 
     </p>
 </div><!-- Sidebar -->
