--- a/authors.html
+++ b/authors.html
@@ -70,7 +70,7 @@ I-Kang's Notes            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on I-Kang's Notes</h1>
-        <li><a href="https://ikding.github.io/author/i-kang-ding.html">I-Kang Ding</a> (42)</li>
+        <li><a href="https://ikding.github.io/author/i-kang-ding.html">I-Kang Ding</a> (47)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -85,7 +85,7 @@ Doing data mining on mining data at KoBold Metals.
 Stanford Engineering Ph.D.
 <br/>
 <br/>
-Interested in machine learning, Python, and climate change.
+Interested in intersection of machine learning, data science, and climate change.
 
     </p>
 </div><!-- Sidebar -->
