--- a/google-team-building.html
+++ b/google-team-building.html
@@ -160,7 +160,7 @@ Doing data mining on mining data at KoBold Metals.
 Stanford Engineering Ph.D.
 <br/>
 <br/>
-Interested in machine learning, Python, and climate change.
+Interested in intersection of machine learning, data science, and climate change.
 
     </p>
 </div><!-- Sidebar -->
