--- a/keep-up-with-climate-tech.html
+++ b/keep-up-with-climate-tech.html
@@ -210,7 +210,7 @@ Doing data mining on mining data at KoBold Metals.
 Stanford Engineering Ph.D.
 <br/>
 <br/>
-Interested in machine learning, Python, and climate change.
+Interested in intersection of machine learning, data science, and climate change.
 
     </p>
 </div><!-- Sidebar -->
