--- a/how-led-works.html
+++ b/how-led-works.html
@@ -107,14 +107,14 @@ I-Kang's Notes            </a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
-                <p><blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1241362087353425922">Tweet of ikding/1241362087353425922</a></blockquote>
-<blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1241362096438247425">Tweet of ikding/1241362096438247425</a></blockquote>
-<blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1241362109763653632">Tweet of ikding/1241362109763653632</a></blockquote>
-<blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1241362120123564033">Tweet of ikding/1241362120123564033</a></blockquote>
-<blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1241362128927436801">Tweet of ikding/1241362128927436801</a></blockquote>
-<blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1241362141887762433">Tweet of ikding/1241362141887762433</a></blockquote>
-<blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1241362151312424960">Tweet of ikding/1241362151312424960</a></blockquote>
-<blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1241362162297290752">Tweet of ikding/1241362162297290752</a></blockquote></p>
+                <p><blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1241362087353425922">Tweet of ikding/1241362087353425922</a></blockquote>
+<blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1241362096438247425">Tweet of ikding/1241362096438247425</a></blockquote>
+<blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1241362109763653632">Tweet of ikding/1241362109763653632</a></blockquote>
+<blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1241362120123564033">Tweet of ikding/1241362120123564033</a></blockquote>
+<blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1241362128927436801">Tweet of ikding/1241362128927436801</a></blockquote>
+<blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1241362141887762433">Tweet of ikding/1241362141887762433</a></blockquote>
+<blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1241362151312424960">Tweet of ikding/1241362151312424960</a></blockquote>
+<blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1241362162297290752">Tweet of ikding/1241362162297290752</a></blockquote></p>
 <script src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
             <!-- /.entry-content -->
