--- a/sf-bay-nuclear-winter.html
+++ b/sf-bay-nuclear-winter.html
@@ -110,14 +110,14 @@ I-Kang's Notes            </a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
-                <p><blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1304146428827066369">Tweet of ikding/1304146428827066369</a></blockquote>
-<blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1304146429930135552">Tweet of ikding/1304146429930135552</a></blockquote>
-<blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1304146430844571648">Tweet of ikding/1304146430844571648</a></blockquote>
-<blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1304146431851204608">Tweet of ikding/1304146431851204608</a></blockquote>
-<blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1304146435567357952">Tweet of ikding/1304146435567357952</a></blockquote>
-<blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1304146436485820416">Tweet of ikding/1304146436485820416</a></blockquote>
-<blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1304146437651931137">Tweet of ikding/1304146437651931137</a></blockquote>
-<blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1304146438494982145">Tweet of ikding/1304146438494982145</a></blockquote></p>
+                <p><blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1304146428827066369">Tweet of ikding/1304146428827066369</a></blockquote>
+<blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1304146429930135552">Tweet of ikding/1304146429930135552</a></blockquote>
+<blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1304146430844571648">Tweet of ikding/1304146430844571648</a></blockquote>
+<blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1304146431851204608">Tweet of ikding/1304146431851204608</a></blockquote>
+<blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1304146435567357952">Tweet of ikding/1304146435567357952</a></blockquote>
+<blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1304146436485820416">Tweet of ikding/1304146436485820416</a></blockquote>
+<blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1304146437651931137">Tweet of ikding/1304146437651931137</a></blockquote>
+<blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1304146438494982145">Tweet of ikding/1304146438494982145</a></blockquote></p>
 <script src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
             <!-- /.entry-content -->
