--- a/thoughts-on-matsci-to-datasci.html
+++ b/thoughts-on-matsci-to-datasci.html
@@ -117,7 +117,7 @@ I-Kang's Notes            </a>
 <p>I am sure many of us would have loved to stay in the climate / clean tech area if the employment opportunities and commensurate compensations were available at the time. But speaking from experience, such opportunities hasn’t been widely available throughout 2012-2018.</p>
 <p>I am happy to see investors having renewed their interests in this area, and new classes of clean tech 2.0 startups emerging. And I sincerely hope that this time, it will be different. In a way, the future of this planet depends on it.</p>
 <p>(Originally posted on twitter)
-<blockquote class="twitter-tweet" align="center"><a href="https://twitter.com/ikding/status/1211143148304568320">Tweet of ikding/1211143148304568320</a></blockquote></p>
+<blockquote class="twitter-tweet" align="center" data-conversation="none"><a href="https://twitter.com/ikding/status/1211143148304568320">Tweet of ikding/1211143148304568320</a></blockquote></p>
 <script src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
             <!-- /.entry-content -->
